# SDR

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  mainprev.c
1/: CMakeLists.txt  SDR_include.h  SDR_init.c  SDR_signal.c  main.c  plot_rx.py
2/: CMakeLists.txt  SDR_include.h  SDR_init.c  main.c
3/: main.c  qpsk.py
4/: .gitignore  CMakeLists.txt  SDR_include.h  SDR_init.c  main.c
4/src/: SDR_include.h  SDR_init.cpp  main.cpp  plot.py  test.cpp
src/: CMakeCache.txt  Makefile  SDR_include.h  SDR_init.cpp  cmake_install.cmake  function.cpp  function_OFDM.cpp  function_all.cpp  imgui.ini  main.cpp  main_OFDM.cpp  main_and_sdr.C  main_with_Barker.cpp  plot.py  test.cpp  test_rx_samples_bpsk_barker13.h
